[gd_scene load_steps=9 format=3 uid="uid://bywy2jk0nhmxu"]

[ext_resource type="Texture2D" uid="uid://dhl1hyah58245" path="res://addons/meshpainter/icons/brush.svg" id="2_o0o07"]
[ext_resource type="Texture2D" uid="uid://513m8rkua7oj" path="res://addons/meshpainter/icons/brush-selected.svg" id="3_0iwwt"]
[ext_resource type="Texture2D" uid="uid://di7rh4ec511px" path="res://addons/meshpainter/icons/bucket.svg" id="4_dl44s"]
[ext_resource type="Texture2D" uid="uid://bdgy56g2mwmtg" path="res://addons/meshpainter/icons/bucket-selected.svg" id="5_nofdd"]
[ext_resource type="Texture2D" uid="uid://duokslclqnes6" path="res://addons/meshpainter/icons/eraser.svg" id="6_c6umj"]
[ext_resource type="Script" path="res://addons/meshpainter/albedo_panel.gd" id="7"]
[ext_resource type="Texture2D" uid="uid://ddwnmqelecfa6" path="res://addons/meshpainter/icons/eraser-selected.svg" id="7_g1jiv"]
[ext_resource type="PackedScene" uid="uid://cdq04ihbsugad" path="res://addons/meshpainter/layer_button.tscn" id="9"]

[node name="A" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 0
script = ExtResource("7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 1024.0
offset_bottom = 600.0

[node name="Label" type="Label" parent="VBoxContainer"]
offset_right = 1024.0
offset_bottom = 26.0
text = "Albedo"

[node name="Modes" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 30.0
offset_right = 1024.0
offset_bottom = 46.0

[node name="BrushButton" type="TextureButton" parent="VBoxContainer/Modes"]
offset_right = 16.0
offset_bottom = 16.0
toggle_mode = true
texture_normal = ExtResource("2_o0o07")
texture_pressed = ExtResource("3_0iwwt")

[node name="BucketButton" type="TextureButton" parent="VBoxContainer/Modes"]
offset_left = 20.0
offset_right = 36.0
offset_bottom = 16.0
toggle_mode = true
texture_normal = ExtResource("4_dl44s")
texture_pressed = ExtResource("5_nofdd")

[node name="EraserButton" type="TextureButton" parent="VBoxContainer/Modes"]
offset_left = 40.0
offset_right = 56.0
offset_bottom = 16.0
toggle_mode = true
texture_normal = ExtResource("6_c6umj")
texture_pressed = ExtResource("7_g1jiv")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
offset_top = 50.0
offset_right = 1024.0
offset_bottom = 54.0

[node name="ColorContainer" type="GridContainer" parent="VBoxContainer"]
offset_top = 58.0
offset_right = 1024.0
offset_bottom = 190.0
columns = 2

[node name="LayerButton" parent="VBoxContainer/ColorContainer" instance=ExtResource("9")]
custom_minimum_size = Vector2(64, 64)
button_mask = 3

[node name="LayerButton2" parent="VBoxContainer/ColorContainer" instance=ExtResource("9")]
custom_minimum_size = Vector2(64, 64)
offset_left = 68.0
offset_right = 132.0
button_mask = 3
layer_nb = 1

[node name="LayerButton3" parent="VBoxContainer/ColorContainer" instance=ExtResource("9")]
custom_minimum_size = Vector2(64, 64)
offset_top = 68.0
offset_bottom = 132.0
button_mask = 3
layer_nb = 2

[node name="LayerButton4" parent="VBoxContainer/ColorContainer" instance=ExtResource("9")]
custom_minimum_size = Vector2(64, 64)
offset_left = 68.0
offset_top = 68.0
offset_right = 132.0
offset_bottom = 132.0
button_mask = 3
layer_nb = 3

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
offset_top = 194.0
offset_right = 1024.0
offset_bottom = 198.0

[node name="IntensityContainer" type="VBoxContainer" parent="VBoxContainer"]
offset_top = 202.0
offset_right = 1024.0
offset_bottom = 248.0

[node name="Label" type="Label" parent="VBoxContainer/IntensityContainer"]
offset_right = 1024.0
offset_bottom = 26.0
text = "Intensity"

[node name="IntensitySlider" type="HSlider" parent="VBoxContainer/IntensityContainer"]
offset_top = 30.0
offset_right = 1024.0
offset_bottom = 46.0
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.1

[node name="SizeContainer" type="VBoxContainer" parent="VBoxContainer"]
offset_top = 252.0
offset_right = 1024.0
offset_bottom = 298.0

[node name="Label" type="Label" parent="VBoxContainer/SizeContainer"]
offset_right = 1024.0
offset_bottom = 26.0
text = "Size"

[node name="SizeSlider" type="HSlider" parent="VBoxContainer/SizeContainer"]
offset_top = 30.0
offset_right = 1024.0
offset_bottom = 46.0
min_value = 0.01
max_value = 0.99
step = 0.01
value = 0.1

[connection signal="pressed" from="VBoxContainer/Modes/BrushButton" to="." method="_on_BrushButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Modes/BucketButton" to="." method="_on_BucketButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Modes/EraserButton" to="." method="_on_EraserButton_pressed"]
[connection signal="selected" from="VBoxContainer/ColorContainer/LayerButton" to="." method="_on_LayerButton_selected"]
[connection signal="value_changed" from="VBoxContainer/ColorContainer/LayerButton" to="." method="_on_LayerButton_value_changed"]
[connection signal="selected" from="VBoxContainer/ColorContainer/LayerButton2" to="." method="_on_LayerButton2_selected"]
[connection signal="value_changed" from="VBoxContainer/ColorContainer/LayerButton2" to="." method="_on_LayerButton2_value_changed"]
[connection signal="selected" from="VBoxContainer/ColorContainer/LayerButton3" to="." method="_on_LayerButton3_selected"]
[connection signal="value_changed" from="VBoxContainer/ColorContainer/LayerButton3" to="." method="_on_LayerButton3_value_changed"]
[connection signal="selected" from="VBoxContainer/ColorContainer/LayerButton4" to="." method="_on_LayerButton4_selected"]
[connection signal="value_changed" from="VBoxContainer/ColorContainer/LayerButton4" to="." method="_on_LayerButton4_value_changed"]
[connection signal="value_changed" from="VBoxContainer/IntensityContainer/IntensitySlider" to="." method="_on_IntensitySlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SizeContainer/SizeSlider" to="." method="_on_SizeSlider_value_changed"]
